--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -157,6 +157,9 @@ function myFunction() {
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Mean and dispersion">Mean and dispersion</a>
 </li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 1">Problem set 1</a>
+</li>
 <li>
 <a href="#Multivariate normal distribution (part 2)">Multivariate normal distribution (part 2)</a>
 </li>
@@ -164,13 +167,13 @@ function myFunction() {
 <a href="#Nonsingular and singular">Nonsingular and singular</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 1">Problem set 1</a>
+<a href="#Problem set 2">Problem set 2</a>
 </li>
 <li>
 <a href="#Multivariate normal distribution (part 3)">Multivariate normal distribution (part 3)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 2">Problem set 2</a>
+<a href="#Problem set 3">Problem set 3</a>
 </li>
 <li>
 <a href="#$\chi^2$  distribution">$\chi^2$  distribution</a>
@@ -179,7 +182,7 @@ function myFunction() {
 <a href="#Geometry of $\chi^2_{(k)}$">Geometry of $\chi^2_{(k)}$</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 3">Problem set 3</a>
+<a href="#Problem set 4">Problem set 4</a>
 </li>
 <li>
 <a href="#$t$  and $F$  distributions">$t$  and $F$  distributions</a>
@@ -191,13 +194,13 @@ function myFunction() {
 <a href="#$F$  distributions">$F$  distributions</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 4">Problem set 4</a>
+<a href="#Problem set 5">Problem set 5</a>
 </li>
 <li>
 <a href="#Sampling distributions for normal sample">Sampling distributions for normal sample</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 5">Problem set 5</a>
+<a href="#Problem set 6">Problem set 6</a>
 </li>
 <li>
 <a href="#Miscellaneous problems">Miscellaneous problems</a>
@@ -305,6 +308,21 @@ and $V(\v Y) = V(A\v X+\v\mu) = A V(\v X)A' = AA'=\Sigma.$
 <b><i>[QED]</i></b>
 </p>
 
+<h2><a
+name="Problem set 1">Problem set 1</a></h2>
+
+<p>
+<b>EXERCISE 1:</b>&nbsp;Find $E(\v X)$  and $V(\v X)$  if $\v X$  has characteristic function
+ $\xi(t_1,t_2) = \exp(-2t_1^2-t_2^2+t_1t_2)$  for $(t_1,t_2)\in{\mathbb R}^2.$</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 2:</b>&nbsp;If $\v X\sim N_m(\v\mu,\Sigma)$  and the components of $\v X$  are all independent,
+ then what can you say about the structure of $\Sigma?$</p>
+
+<p></p>
+
 <h1><a
 name="Multivariate normal distribution (part 2)">Multivariate normal distribution (part 2)</a></h1>
 As we have already mentioned, a multivariate normal distribution need not always have a density. However, for an important
@@ -371,15 +389,15 @@ Hence the result.
 <p></p>
 
 <h2><a
-name="Problem set 1">Problem set 1</a></h2>
+name="Problem set 2">Problem set 2</a></h2>
 
 <p>
-<b>EXERCISE 1:</b>&nbsp;Describe $N_2(\v0,I)$  distribution.</p>
+<b>EXERCISE 3:</b>&nbsp;Describe $N_2(\v0,I)$  distribution.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 2:</b>&nbsp;Let $J_2$  be the $2\times2$  matrix with all entries equal to 1. Let 
+<b>EXERCISE 4:</b>&nbsp;Let $J_2$  be the $2\times2$  matrix with all entries equal to 1. Let 
 $$\left[\begin{array}{ccccccccccc}X\\Y
 \end{array}\right] \sim N_2(\v 0, J_2).$$
 If we take data $(x_1,y_1),...,(x_n,y_n)$  from $(X,Y)$ , what will the scatterplot look like?
@@ -457,16 +475,19 @@ and hence $\v X_1$  and $\v X_2$  are independent, as required.
 <p></p>
 
 <h2><a
-name="Problem set 2">Problem set 2</a></h2>
+name="Problem set 3">Problem set 3</a></h2>
 
 <p></p>
 Next we shall discuss some distributions related to the normal distribution.
 <h1><a
 name="$\chi^2$  distribution">$\chi^2$  distribution</a></h1>
-If $X_1,...,X_n$  are IID $N(0,1)$  then the distribution of $\sum_1^n X_i^2$  is called <b><font color="red" size="40">chi-square distribution wit degrees of freedom</font></b> 
+
+<fieldset>
+<legend><b>Definition: $\chi^2$</b></legend>If $X_1,...,X_n$  are IID $N(0,1)$  then the distribution of $\sum_1^n X_i^2$ 
+ is called <b><font color="red" size="40">chi-square distribution with degrees of freedom</font></b> 
  $n.$  We write 
 $$\sum_1^n X_i^2\sim \chi_{(n)}^2.$$
-<p></p>
+</fieldset>
 
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
@@ -529,26 +550,26 @@ Also $\|\v Y\|^2 = \sum_1^k Z_i^2\sim\k k,$  as required.
 <p></p>
 
 <p>
-<b>EXERCISE 3:</b>&nbsp;
+<b>EXERCISE 5:</b>&nbsp;
 Let $A$  be a symmetric, idempotent matrix. Let $\v X'A\v X\sim\k{r(A)}.$  Show tjis. 
 </p>
 The following result is used in linear models. 
 <p>
-<b>EXERCISE 4:</b>&nbsp;Let $\v X\sim N_n(\v \mu, I).$  Let $S$  be any $k$-dimensional subspace
+<b>EXERCISE 6:</b>&nbsp;Let $\v X\sim N_n(\v \mu, I).$  Let $S$  be any $k$-dimensional subspace
  containing $\v \mu.$  Then show that the orthogonal projection of $\v X$  onto
  $S^\perp$  must have $\k {n-k}$  distribution.</p>
 
 <p></p>
 
 <fieldset>
-<legend><b>Definition: Non-central $\k$</b></legend>
+<legend><b>Definition: Non-central $\chi^2$</b></legend>
 If $X_1,...,X_n$  are independent $N(\mu_i,1),$  then the distribution $\sum X_i^2$  is
  called <b><font color="red" size="40">noncentral $\k n$  with noncentralty parameter $\sum_i\mu_i^2.$</font></b> 
 
 </fieldset>
 
 <h2><a
-name="Problem set 3">Problem set 3</a></h2>
+name="Problem set 4">Problem set 4</a></h2>
 
 <h1><a
 name="$t$  and $F$  distributions">$t$  and $F$  distributions</a></h1>
@@ -618,7 +639,7 @@ $$f(x) =\left\{\begin{array}{ll}\mbox{const }x^{\frac m2-1}(mx+n)^{-\frac{m+n}{2
 <p></p>
 
 <h2><a
-name="Problem set 4">Problem set 4</a></h2>
+name="Problem set 5">Problem set 5</a></h2>
 
 <h1><a
 name="Sampling distributions for normal sample">Sampling distributions for normal sample</a></h1>
@@ -648,7 +669,7 @@ Let $X_1,...,X_n$  be IID $N(\mu, \sigma^2).$  Then
 </fieldset>
 
 <h2><a
-name="Problem set 5">Problem set 5</a></h2>
+name="Problem set 6">Problem set 6</a></h2>
 
 <p></p>
 
@@ -656,22 +677,22 @@ name="Problem set 5">Problem set 5</a></h2>
 name="Miscellaneous problems">Miscellaneous problems</a></h1>
 
 <p>
-<b>EXERCISE 5:</b>&nbsp;If $X$  has a density of the form $f(x) \propto \exp(a+b+cx^2),~~x\in{\mathbb R},$  then
+<b>EXERCISE 7:</b>&nbsp;If $X$  has a density of the form $f(x) \propto \exp(a+b+cx^2),~~x\in{\mathbb R},$  then
  find $E(X)$  and $V(X)$  in terms of $a,b,c.$  Also find median of $X.$</p>
 
 <p>
-<b>EXERCISE 6:</b>&nbsp;Construct $(X,Y)$ such that marginally $X$
+<b>EXERCISE 8:</b>&nbsp;Construct $(X,Y)$ such that marginally $X$
 and $Y$ have $N(0,1)$ distribution, but $(X,Y)$
 is not bivariate normal.</p>
 
 <p>
-<b>EXERCISE 7:</b>&nbsp;Suppose that you have a software to generate IID replications from $N(0,1).$  Let
+<b>EXERCISE 9:</b>&nbsp;Suppose that you have a software to generate IID replications from $N(0,1).$  Let
 $\mu\in{\mathbb R}^n$  and  $\Sigma$  be any $n\times n$  PD matrix. Suggest how you can
  use the software to generate a single observation from $N_n(\mu,\Sigma).$  Assume that the
  software can perform matrix operations.</p>
 
 <p>
-<b>EXERCISE 8:</b>&nbsp;If $X,Y$  are IID $N(0,1)$, then what is the chance that the random point
+<b>EXERCISE 10:</b>&nbsp;If $X,Y$  are IID $N(0,1)$, then what is the chance that the random point
  $(X,Y)$  lies in the annulus shown below?
 <center>
 <table width="100%">
@@ -687,41 +708,41 @@ Express you answer in terms CDF of some standard distribution.
 </p>
 
 <p>
-<b>EXERCISE 9:</b>&nbsp;Let $X_1,...,X_n$  be a random sample from $N(\mu,\sigma^2)$  for some
+<b>EXERCISE 11:</b>&nbsp;Let $X_1,...,X_n$  be a random sample from $N(\mu,\sigma^2)$  for some
  $\mu\in{\mathbb R}$  and $\sigma^2&gt;0.$  Find $a&lt;b$  such that $P\left(a&lt; \frac{\bar
  X-\mu}{S/\sqrt{n}} &lt; b\right) = 0.95$  and $b-a$  is the least possible subject to this.</p>
 
 <p>
-<b>EXERCISE 10:</b>&nbsp;<font size="-2">[rossfcpnorm1.png]</font><img width="" src="image/rossfcpnorm1.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 12:</b>&nbsp;<font size="-2">[rossfcpnorm1.png]</font><img width="" src="image/rossfcpnorm1.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 11:</b>&nbsp;<font size="-2">[rossfcpnorm2.png]</font><img width="" src="image/rossfcpnorm2.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 13:</b>&nbsp;<font size="-2">[rossfcpnorm2.png]</font><img width="" src="image/rossfcpnorm2.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 12:</b>&nbsp;<font size="-2">[rossfcpnorm3.png]</font><img width="" src="image/rossfcpnorm3.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 14:</b>&nbsp;<font size="-2">[rossfcpnorm3.png]</font><img width="" src="image/rossfcpnorm3.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 13:</b>&nbsp;<font size="-2">[rossfcpnorm4.png]</font><img width="" src="image/rossfcpnorm4.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 15:</b>&nbsp;<font size="-2">[rossfcpnorm4.png]</font><img width="" src="image/rossfcpnorm4.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 14:</b>&nbsp;<font size="-2">[rossfcpnorm5.png]</font><img width="" src="image/rossfcpnorm5.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 16:</b>&nbsp;<font size="-2">[rossfcpnorm5.png]</font><img width="" src="image/rossfcpnorm5.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 15:</b>&nbsp;<font size="-2">[rossfcpnorm6.png]</font><img width="" src="image/rossfcpnorm6.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 17:</b>&nbsp;<font size="-2">[rossfcpnorm6.png]</font><img width="" src="image/rossfcpnorm6.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 16:</b>&nbsp;<font size="-2">[rossfcpnorm7.png]</font><img width="" src="image/rossfcpnorm7.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 18:</b>&nbsp;<font size="-2">[rossfcpnorm7.png]</font><img width="" src="image/rossfcpnorm7.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 17:</b>&nbsp;<font size="-2">[rossfcpnorm8.png]</font><img width="" src="image/rossfcpnorm8.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 19:</b>&nbsp;<font size="-2">[rossfcpnorm8.png]</font><img width="" src="image/rossfcpnorm8.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 18:</b>&nbsp;<font size="-2">[rossipmnorm1.png]</font><img width="" src="image/rossipmnorm1.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 20:</b>&nbsp;<font size="-2">[rossipmnorm1.png]</font><img width="" src="image/rossipmnorm1.png" style="vertical-align:text-top;"></p>
 
 <p>
-<b>EXERCISE 19:</b>&nbsp;<font size="-2">[rossipmnorm2.png]</font><img width="" src="image/rossipmnorm2.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 21:</b>&nbsp;<font size="-2">[rossipmnorm2.png]</font><img width="" src="image/rossipmnorm2.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 20:</b>&nbsp;<font size="-2">[hpstrans19.png]</font><img width="" src="image/hpstrans19.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 22:</b>&nbsp;<font size="-2">[hpstrans19.png]</font><img width="" src="image/hpstrans19.png" style="vertical-align:text-top;"></p>
 
 <p></p>
 <hr/>
